--- a/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
+++ b/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
@@ -18,6 +18,11 @@
                   <Font name="Bauhaus 93" size="40.0" />
                </font>
             </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="by TheJustRusik">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current mode:">
                <font>
                   <Font name="Agency FB" size="30.0" />
@@ -79,6 +84,11 @@
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
+            </Button>
+            <Button fx:id="autoPlayBtn" mnemonicParsing="false" onAction="#onAutoPlayBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Auto" textFill="WHITE" visible="false">
+               <font>
+                  <Font name="Agency FB" size="25.0" />
+               </font>
             </Button>
          </children>
          <HBox.margin>
