--- a/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
+++ b/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
@@ -20,7 +20,7 @@
             </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="by TheJustRusik">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Agency FB" size="20.0" />
                </font>
             </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current mode:">
@@ -77,19 +77,23 @@
                   <Font name="Agency FB" size="40.0" />
                </font>
             </Button>
-            <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Next" textFill="WHITE" visible="false">
-               <font>
-                  <Font name="Agency FB" size="25.0" />
-               </font>
+            <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
+               <children>
+                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Next" textFill="WHITE" visible="false">
+                     <font>
+                        <Font name="Agency FB" size="25.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="autoPlayBtn" mnemonicParsing="false" onAction="#onAutoPlayBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Auto" textFill="WHITE" visible="false">
+                     <font>
+                        <Font name="Agency FB" size="25.0" />
+                     </font>
+                  </Button>
+               </children>
                <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets top="10.0" />
                </VBox.margin>
-            </Button>
-            <Button fx:id="autoPlayBtn" mnemonicParsing="false" onAction="#onAutoPlayBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Auto" textFill="WHITE" visible="false">
-               <font>
-                  <Font name="Agency FB" size="25.0" />
-               </font>
-            </Button>
+            </HBox>
          </children>
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="5.0" top="10.0" />
