--- a/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
+++ b/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -9,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="703.0" style="-fx-background-color: #16171b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.kenuki.dijkstrafx.frontend.MainPageController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="802.0" style="-fx-background-color: #16171b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.kenuki.dijkstrafx.frontend.MainPageController">
    <children>
       <VBox alignment="CENTER" prefHeight="506.0" prefWidth="266.0" style="-fx-background-radius: 50; -fx-background-color: #202124;" HBox.hgrow="SOMETIMES">
          <children>
@@ -18,11 +20,18 @@
                   <Font name="Bauhaus 93" size="40.0" />
                </font>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="by TheJustRusik">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="by TheJustRusik" wrappingWidth="101.484375">
                <font>
                   <Font name="Agency FB" size="20.0" />
                </font>
             </Text>
+            <HBox prefHeight="25.0" prefWidth="266.0" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Field size:">
+               <font>
+                  <Font name="Agency FB" size="30.0" />
+               </font>
+            </Text>
+            <ChoiceBox fx:id="choiceBox" prefHeight="27.0" prefWidth="156.0" style="-fx-background-color: #16171b; -fx-background-radius: 50; -fx-border-color: #01b075; -fx-border-radius: 50;" />
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current mode:">
                <font>
                   <Font name="Agency FB" size="30.0" />
@@ -72,11 +81,42 @@
                   </VBox>
                </children>
             </HBox>
+            <HBox alignment="CENTER" prefHeight="48.0" prefWidth="266.0" spacing="5.0">
+               <children>
+                  <Button fx:id="randomBtn" mnemonicParsing="false" onAction="#onRandomBtnClicked" prefHeight="40.0" prefWidth="90.0" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Random!" textFill="WHITE">
+                     <font>
+                        <Font name="Agency FB" size="20.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="clearBtn" mnemonicParsing="false" onAction="#onClearBtnClicked" prefHeight="40.0" prefWidth="90.0" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Clear!" textFill="WHITE">
+                     <font>
+                        <Font name="Agency FB" size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" top="5.0" />
+               </VBox.margin>
+            </HBox>
             <Button fx:id="playBtn" mnemonicParsing="false" onAction="#onSearchBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Search!" textFill="WHITE">
                <font>
                   <Font name="Agency FB" size="40.0" />
                </font>
             </Button>
+            <VBox alignment="CENTER" prefHeight="80.0" prefWidth="266.0" VBox.vgrow="NEVER">
+               <children>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Animation speed:">
+                     <font>
+                        <Font name="Agency FB" size="30.0" />
+                     </font>
+                  </Text>
+                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="266.0" VBox.vgrow="NEVER">
+                     <children>
+                        <Slider id="minimalisticSlider" fx:id="animationSlider" blockIncrement="50.0" majorTickUnit="10.0" max="50.0" min="1.0" minorTickCount="5" prefHeight="15.0" prefWidth="214.0" showTickMarks="true" snapToTicks="true" stylesheets="@styles/slider.css" value="20.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
             <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
                <children>
                   <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Next" textFill="WHITE" visible="false">
