--- a/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
+++ b/src/main/resources/dev/kenuki/dijkstrafx/main.fxml
@@ -8,147 +8,92 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="550.0" prefWidth="802.0" style="-fx-background-color: #16171b;" xmlns="http://javafx.com/javafx/21"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.kenuki.dijkstrafx.frontend.MainPageController">
-   <VBox alignment="CENTER" prefHeight="506.0" prefWidth="266.0"
-         style="-fx-background-radius: 50; -fx-background-color: #202124;" HBox.hgrow="SOMETIMES">
+<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="802.0" style="-fx-background-color: #16171b;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.kenuki.dijkstrafx.frontend.MainPageController" stylesheets="@styles/main.css">
+   <VBox alignment="CENTER" prefHeight="506.0" prefWidth="266.0" style="-fx-background-radius: 50; -fx-background-color: #202124;" HBox.hgrow="SOMETIMES">
       <HBox.margin>
-         <Insets bottom="10.0" left="10.0" right="5.0" top="10.0"/>
+         <Insets bottom="10.0" left="10.0" right="5.0" top="10.0" />
       </HBox.margin>
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="DijkstraFX" wrappingWidth="180.15625">
-         <font>
-            <Font name="Bauhaus 93" size="40.0"/>
-         </font>
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: 'Bauhaus 93'; -fx-font-size: 40" text="DijkstraFX" wrappingWidth="180.15625">
       </Text>
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="by TheJustRusik" wrappingWidth="101.484375">
-         <font>
-            <Font name="Agency FB" size="20.0"/>
-         </font>
+      <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 20" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="by TheJustRusik">
+
       </Text>
-      <HBox prefHeight="25.0" prefWidth="266.0"/>
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Field size:">
-         <font>
-            <Font name="Agency FB" size="30.0"/>
-         </font>
+      <HBox prefHeight="25.0" prefWidth="266.0" />
+      <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 30" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Field size:">
+
       </Text>
-      <ChoiceBox fx:id="choiceBox" prefHeight="27.0" prefWidth="156.0"
-                 style="-fx-background-color: #16171b; -fx-background-radius: 50; -fx-border-color: #01b075; -fx-border-radius: 50;"/>
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current mode:">
-         <font>
-            <Font name="Agency FB" size="30.0"/>
-         </font>
+      <ChoiceBox fx:id="choiceBox" prefHeight="27.0" prefWidth="156.0" style="-fx-background-color: #16171b; -fx-background-radius: 50; -fx-border-color: #01b075; -fx-border-radius: 50;" />
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current mode:" style="-fx-font-family: 'Agency FB'; -fx-font-size: 30;">
+
       </Text>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <VBox fx:id="styleClear" alignment="CENTER" onMouseClicked="#onStyleClearClicked" HBox.hgrow="NEVER">
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16171b" height="50.0" stroke="BLACK"
-                       strokeType="INSIDE" width="50.0"/>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Clear" textAlignment="CENTER"
-                  wrappingWidth="41.0068359375" VBox.vgrow="ALWAYS">
-               <font>
-                  <Font name="Agency FB" size="22.0"/>
-               </font>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16171b" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
+            <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 22" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Clear" textAlignment="CENTER" wrappingWidth="41.0068359375" VBox.vgrow="ALWAYS">
+
             </Text>
          </VBox>
          <VBox fx:id="styleWall" alignment="CENTER" onMouseClicked="#onStyleWallClicked" HBox.hgrow="NEVER">
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="50.0" stroke="BLACK"
-                       strokeType="INSIDE" width="50.0"/>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Wall" textAlignment="CENTER"
-                  wrappingWidth="36.14453125">
-               <font>
-                  <Font name="Agency FB" size="22.0"/>
-               </font>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
+            <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 22" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Wall" textAlignment="CENTER" wrappingWidth="36.14453125">
+
             </Text>
          </VBox>
          <VBox fx:id="styleStart" alignment="CENTER" onMouseClicked="#onStyleStartClicked" HBox.hgrow="NEVER">
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6cff00" height="50.0" stroke="BLACK"
-                       strokeType="INSIDE" width="50.0"/>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Start" textAlignment="CENTER"
-                  wrappingWidth="42.900390625">
-               <font>
-                  <Font name="Agency FB" size="22.0"/>
-               </font>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6cff00" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
+            <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 22" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Start" textAlignment="CENTER" wrappingWidth="42.900390625">
+
             </Text>
          </VBox>
          <VBox fx:id="styleFinish" alignment="CENTER" onMouseClicked="#onStyleFinishClicked" HBox.hgrow="NEVER">
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff4949" height="50.0" stroke="BLACK"
-                       strokeType="INSIDE" width="50.0"/>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Finish" textAlignment="CENTER"
-                  wrappingWidth="46.8427734375">
-               <font>
-                  <Font name="Agency FB" size="22.0"/>
-               </font>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff4949" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
+            <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 22" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Finish" textAlignment="CENTER" wrappingWidth="46.8427734375">
+
             </Text>
          </VBox>
       </HBox>
       <HBox alignment="CENTER" prefHeight="48.0" prefWidth="266.0" spacing="5.0">
          <VBox.margin>
-            <Insets bottom="10.0" top="5.0"/>
+            <Insets bottom="10.0" top="5.0" />
          </VBox.margin>
-         <Button fx:id="randomBtn" mnemonicParsing="false" onAction="#onRandomBtnClicked" prefHeight="40.0"
-                 prefWidth="90.0" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Random!"
-                 textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="20.0"/>
-            </font>
+         <Button style="-fx-background-radius: 50; -fx-background-color: #01b075; -fx-font-family: 'Agency FB'; -fx-font-size: 20" fx:id="randomBtn" mnemonicParsing="false" onAction="#onRandomBtnClicked" prefHeight="40.0" prefWidth="90.0" text="Random!" textFill="WHITE">
+
          </Button>
-         <Button fx:id="clearBtn" mnemonicParsing="false" onAction="#onClearBtnClicked" prefHeight="40.0"
-                 prefWidth="90.0" style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Clear!"
-                 textFill="WHITE">
-            <font>
-               <Font name="Agency FB" size="20.0"/>
-            </font>
+         <Button fx:id="clearBtn" mnemonicParsing="false" onAction="#onClearBtnClicked" prefHeight="40.0" prefWidth="90.0" style="-fx-background-radius: 50; -fx-background-color: #01b075; -fx-font-family: 'Agency FB'; -fx-font-size: 20" text="Clear!" textFill="WHITE">
+
          </Button>
       </HBox>
-      <Button fx:id="playBtn" mnemonicParsing="false" onAction="#onSearchBtnClicked"
-              style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Search!" textFill="WHITE">
-         <font>
-            <Font name="Agency FB" size="40.0"/>
-         </font>
+      <Button fx:id="playBtn" mnemonicParsing="false" onAction="#onSearchBtnClicked" style="-fx-font-family: 'Agency FB'; -fx-font-size: 40; -fx-background-radius: 50; -fx-background-color: #01b075;" text="Search!" textFill="WHITE">
+
       </Button>
       <VBox alignment="CENTER" prefHeight="80.0" prefWidth="266.0" VBox.vgrow="NEVER">
-         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Animation speed:">
-            <font>
-               <Font name="Agency FB" size="30.0"/>
-            </font>
+         <Text style="-fx-font-family: 'Agency FB'; -fx-font-size: 30" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Animation speed:">
+
          </Text>
          <HBox alignment="CENTER" prefHeight="50.0" prefWidth="266.0" VBox.vgrow="NEVER">
-            <Slider id="minimalisticSlider" fx:id="animationSlider" blockIncrement="50.0" majorTickUnit="10.0"
-                    max="50.0" min="1.0" minorTickCount="5" prefHeight="15.0" prefWidth="214.0"
-                    showTickMarks="true" snapToTicks="true" stylesheets="@styles/slider.css" value="20.0"/>
+            <Slider id="minimalisticSlider" fx:id="animationSlider" blockIncrement="50.0" majorTickUnit="10.0" max="50.0" min="1.0" minorTickCount="5" prefHeight="15.0" prefWidth="214.0" showTickMarks="true" snapToTicks="true" stylesheets="@styles/slider.css" value="20.0" />
          </HBox>
       </VBox>
       <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
          <VBox.margin>
-            <Insets top="10.0"/>
+            <Insets top="10.0" />
          </VBox.margin>
-         <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextBtnClicked"
-                 style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Next" textFill="WHITE"
-                 visible="false">
-            <font>
-               <Font name="Agency FB" size="25.0"/>
-            </font>
+         <Button style="-fx-background-radius: 50; -fx-background-color: #01b075; -fx-font-family: 'Agency FB'; -fx-font-size: 25" fx:id="nextBtn" mnemonicParsing="false" onAction="#onNextBtnClicked" text="Next" textFill="WHITE" visible="false">
+
          </Button>
-         <Button fx:id="autoPlayBtn" mnemonicParsing="false" onAction="#onAutoPlayBtnClicked"
-                 style="-fx-background-radius: 50; -fx-background-color: #01b075;" text="Auto" textFill="WHITE"
-                 visible="false">
-            <font>
-               <Font name="Agency FB" size="25.0"/>
-            </font>
+         <Button fx:id="autoPlayBtn" mnemonicParsing="false" onAction="#onAutoPlayBtnClicked" style="-fx-background-radius: 50; -fx-background-color: #01b075; -fx-font-family: 'Agency FB'; -fx-font-size: 25" text="Auto" textFill="WHITE" visible="false">
+
          </Button>
       </HBox>
    </VBox>
-   <AnchorPane fx:id="body" prefHeight="200.0" prefWidth="200.0"
-               style="-fx-border-insets: 0; -fx-border-radius: 5; -fx-border-color: #FFFFFF; -fx-background-color: #16171b;"
-               HBox.hgrow="ALWAYS">
+   <AnchorPane fx:id="body" prefHeight="200.0" prefWidth="200.0" style="-fx-border-insets: 0; -fx-border-radius: 5; -fx-border-color: #FFFFFF; -fx-background-color: #16171b;" HBox.hgrow="ALWAYS">
       <padding>
-         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
       </padding>
       <HBox.margin>
-         <Insets bottom="10.0" left="5.0" right="10.0" top="10.0"/>
+         <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
       </HBox.margin>
    </AnchorPane>
 </HBox>
